add title of duck-typing

--- a/new_age_pl_sildes/newage.html
+++ b/new_age_pl_sildes/newage.html
@@ -657,6 +657,23 @@ a = 3.1415926    # 'a' is a float now
 
 <slide>
 <hgroup>
+<h2 class="Takahashi">&nbsp;</h2>
+<h1 class="Takahashi">Duck Typing</h1>
+</hgroup>
+</slide>
+
+<slide class="segue dark quote nobackground">
+  <aside class="gdbar right bottom"><img alt="google_icon" src="images/google_developers_icon_128.png"></aside>
+  <article class="flexbox vleft auto-fadein">
+    <q>
+      When I see a bird that walks like a duck <br/>and swims like a duck<br/> and quacks like a duck,<br/>&nbsp;&nbsp;&nbsp;&nbsp;I call that bird a duck.
+    </q>
+   
+  </article>
+</slide>
+
+<slide>
+<hgroup>
 <h1 class="Takahashi">&nbsp;</h1>
 <h2 class="Takahashi">Auto Garbage Collection</h2>
 <p style="text-align:right;">I have told you.</p>
@@ -1211,6 +1228,15 @@ b = temp;
 <h1 class="Takahashi">a, b = b, a</h1>
 </hgroup>
 </slide>
+
+<slide>
+<hgroup>
+
+<h3 style="text-align:center;">lots of</h3>
+<h1 class="Takahashi" style="text-align:center;">Open Sources</h1>
+</hgroup>
+</slide>
+
 
 <slide>
 <hgroup>
