--- a/new_age_pl_sildes/newage.html
+++ b/new_age_pl_sildes/newage.html
@@ -386,6 +386,12 @@ void Stars(int n, int end){
 </hgroup>
 </slide>
 
+<slide>
+<hgroup>
+<h3 class="Takahashi">Object-Oriented Programming</h3>
+<h1 class="Takahashi">OOP</h1>
+</hgroup>
+</slide>
 
 
 <slide>
@@ -430,11 +436,11 @@ float fabs(float a){...}
 /* and than.. */
 int main(){
     int   n = -1;
-    float f = -10.0;    
-    abs(n); // gets 1 
-    <b>abs(f); // error!</b>
+    float f = -4.4;    
+    abs(n); // =&gt; 1 
+    <b>abs(f); // =&gt; 4</b>
 
-    fabs(f);// gets 10.0
+    fabs(f);// =&gt; 4.4
 }
 </pre>   
 </article>
@@ -464,7 +470,7 @@ int main(){
 
 <slide>
 <hgroup>
-<h3 class="Takahashi">&nbsp;&nbsp;Java & C#</h3>
+<h3 class="Takahashi">&nbsp;&nbsp;Java &amp; C#</h3>
 <h2 class="Takahashi">Auto Garbage Collection</h2>
 <br/><br/>
 <h2 style="text-align:right;">&nbsp;&nbsp;&nbsp;&nbsp;Learn from LISP</h2>
@@ -1163,7 +1169,7 @@ lang = { :ruby =&gt; 'easy', :python =&gt; 'clean', :perl =&gt; 'ugly' }
 lang[:lisp] = 'funny'
 lang[:c] = 'fast'
 
-puts lang[:Python] # =&gt; clean
+puts lang[:python] # =&gt; clean
 
 lang.each_pair do |key, value|
   puts key.to_s + ' is ' + value
@@ -2071,7 +2077,7 @@ end
 <hgroup>
 <h2 class="Takahashi">&nbsp;</h2>
 <h1 >&nbsp;</h1>
-<h1 class="Takahashi">Fuction</h1>
+<h1 class="Takahashi">Method</h1>
 </hgroup>
 </slide>
 
@@ -2188,6 +2194,23 @@ public:
 
 <slide>
   <hgroup>
+    <h2>Class in C++</h2>
+  </hgroup>
+  <article>
+<pre class="prettyprint" data-lang="c++">
+int main(){
+  Cat my_cat("Small White", 2);
+  
+  // after a year
+  my_cat.setAge(my_cat.getAge() + 1);
+}
+</pre>
+  </article>
+</slide>
+
+
+<slide>
+  <hgroup>
     <h2>Class in Ruby</h2>
   </hgroup>
   <article>
@@ -2212,12 +2235,26 @@ end
 
 <slide>
   <hgroup>
+    <h2>Class in Ruby</h2>
+  </hgroup>
+  <article>
+<pre class="prettyprint" data-lang="ruby">
+my_cat = Cat.new("Small Red", 1)
+
+# after 1 year
+my_cat.age = my_cat.age + 1
+</pre>
+  </article>
+</slide>
+
+<slide>
+  <hgroup>
     <h2>Class in Ruby Ver.2</h2>
   </hgroup>
   <article>
 <pre class="prettyprint" data-lang="ruby">
 class Cat
-  attr_accessor :age
+  <b>attr_accessor :age</b>
 
   def initialize(name, age)
     @name, @age = name, age
@@ -2225,8 +2262,37 @@ class Cat
 
 end
 </pre>
+
+<pre class="prettyprint" data-lang="ruby">
+my_cat = Cat.new("Small Red", 1)
+
+# after 1 year
+my_cat.age = my_cat.age + 1
+</pre>
   </article>
 </slide>
+
+<!-- more about Polymorphism and duck typing -->
+
+<slide>
+<hgroup>
+<h1 class="Takahashi">&nbsp;</h1>
+
+<h2 class="Takahashi">More issues</h2>
+</hgroup>
+</slide>
+
+
+
+
+<slide>
+<hgroup>
+<h1 class="Takahashi">&nbsp;</h1>
+<h2 class="Takahashi">Interpreter </h2>
+<h2 class="Takahashi">and Compiler</h2>
+</hgroup>
+</slide>
+
 
 <slide>
 <hgroup>
@@ -2237,12 +2303,38 @@ end
 </slide>
 
 <slide>
+    <article>
+      <img src="images/matz_no_world.jpg" class="reflect" alt="Matz's programming world" style="height:520px;">
+      <footer class="source"></footer>
+    </article>
+  </slide>
+  
+<slide>
 <hgroup>
-<h1 class="Takahashi">&nbsp;</h1>
-<h2 class="Takahashi">Interpreter </h2>
-<h2 class="Takahashi">and Compiler</h2>
+<h2>References</h2>
 </hgroup>
-</slide>
+<article>
+
+</article>
+
+</slide>  
+
+<slide>
+<hgroup>
+<h2>License</h2>
+</hgroup>
+<article>
+<p>The slide template is not my work,<br />
+see infos at <a herf="http://code.google.com/p/io-2012-slides/">http://code.google.com/p/io-2012-slides</a></p>
+<br/>
+<br/>
+<p>
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a><br /><br />All contents are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+</p>
+</article>
+
+</slide> 
+
 
 <!-- --ending-- -->
 
