--- a/new_age_pl_sildes/images/history_svg.html
+++ b/new_age_pl_sildes/images/history_svg.html
@@ -30,7 +30,7 @@
   <polyline se:connector="svg_3 svg_13" fill="none" stroke-width="2" stroke="#000000" points="46.1948,30.5 62.5897,68.625 78.9847,106.75" id="svg_16"/>
   <polyline se:connector="svg_1 svg_10" fill="none" stroke-width="2" stroke="#000000" points="78,24.1406 135.25,31.8414 192.5,39.5421" id="svg_15"/>
   <rect opacity="0.2" fill="#0000bf" stroke="#000000" x="9" y="8" width="69" height="23" id="svg_1"/>
-  <text xml:space="preserve" text-anchor="middle" font-family="Sans-serif" font-size="16" id="svg_3" y="26" x="42" stroke-width="0" stroke="#000000" fill="#000000">Fortan</text>
+  <text xml:space="preserve" text-anchor="middle" font-family="Sans-serif" font-size="16" id="svg_3" y="26" x="42" stroke-width="0" stroke="#000000" fill="#000000">Fortran</text>
   <rect opacity="0.2" id="svg_4" height="21" width="69" y="38.75" x="84.5" stroke="#000000" fill="#0000bf"/>
   <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="16" id="svg_7" y="55.75" x="119.5" stroke-width="0" stroke="#000000" fill="#000000">COBOL</text>
   <text xml:space="preserve" text-anchor="middle" font-family="serif" font-size="16" id="svg_9" y="49.75" x="228.5" stroke-width="0" stroke="#000000" fill="#000000">Algol 60</text>
