--- a/new_age_pl_sildes/newage.html
+++ b/new_age_pl_sildes/newage.html
@@ -1457,7 +1457,7 @@ b = temp;
 <slide>
 <hgroup>
 <h1 class="Takahashi">&nbsp;</h1>
-<h3 class="Takahashi">In Prel, Python, Ruby, Go...</h3>
+<h3 class="Takahashi">In Perl, Python, Ruby, Go...</h3>
 </hgroup>
 </slide>
 
@@ -1728,7 +1728,7 @@ int main(){
     int i;
     
     for(i = 0 ; i &lt; 5 ; ++i){
-        printf("%d", ary(i));
+        printf("%d", ary[i]);
     }
 }
 </pre>
