final check, add ref

--- a/new_age_pl_sildes/newage.html
+++ b/new_age_pl_sildes/newage.html
@@ -80,7 +80,7 @@ URL: https://code.google.com/p/io-2012-slides
   <hgroup>
     <h2>1960s</h2>
   </hgroup>
-  <article class="build">
+  <article>
     <ul>
      <li>Pascal</li>
      <li>C</li>
@@ -88,8 +88,8 @@ URL: https://code.google.com/p/io-2012-slides
        <ul><li>Object-Oriented Programming</li></ul>
      </li>
     </ul>
-    <p>
-    <img src="images/linss.jpg" alt="nilss" /> : Pascal is elegant.
+    <p class="build">
+    <span><img src="images/linss.jpg" alt="nilss" /> : Pascal is elegant.</span>
     </p>
   </article>
 </slide>
@@ -2150,6 +2150,17 @@ b = a.sort()
 </slide>
 
 <slide>
+  <hgroup>
+<h2>Book Store in Tokyo</h2>
+</hgroup>
+  <article>
+    <img src="images/jp_bookstore_1.png" class="reflect" alt="bookstore"> 
+    <img style="height:500px" src="images/jp_bookstore_2.png" class="reflect" alt="bookstore"> 
+    <footer class="source">Book Store in Tokyo</footer>
+  </article>
+</slide>
+
+<slide>
 <hgroup>
 
 <h2>Ruby on Rails</h2>
@@ -2654,6 +2665,16 @@ my_cat.age = my_cat.age + 1
 </article>
 </slide>
 
+<slide>
+<hgroup>
+<h2>Java in different eyes...</h2>
+</hgroup>
+<article>
+<img src="images/Java_logo.svg" alt="java logo" style="height:420px;"/>
+</article>
+</slide>
+
+
 <!-- more about Polymorphism and duck typing -->
 <!-- 0 == false or 0 == true?  -->
 
@@ -2671,7 +2692,21 @@ my_cat.age = my_cat.age + 1
       <img src="images/matz_no_world.jpg" class="reflect" alt="Matz's programming world" style="height:520px;">
       <footer class="source"></footer>
     </article>
-  </slide>
+</slide>
+
+<slide>
+    <article>
+      <img src="images/lrg.jpg" class="reflect" alt="The Ruby Programming Language" style="height:520px;">
+      <footer class="source">The Ruby Programming Language</footer>
+    </article>
+</slide>
+
+<slide>
+    <article>
+      <img src="images/rp.jpg" class="reflect" alt="Ruby Programming" style="height:520px;">
+      <footer class="source">Ruby Programming</footer>
+    </article>
+</slide>
   
 <slide>
 <hgroup>
@@ -2686,13 +2721,50 @@ my_cat.age = my_cat.age + 1
 <li>まつもとゆきひろ コードの世界~スーパー・プログラマになる14の思考法<br> by まつもとゆきひろ, 日経Linux</li>
 <li>Practical Common Lisp by Peter Seibel</li>
 <li>JavaScript: The Good Parts by Douglas Crockford, O'REILLY</li>
-<li>What's wrong with Perl http://www.garshol.priv.no/download/text/perl.html</li>
-<li>Haskell趣學指南 http://learnyouahaskell-zh-tw.csie.org</li>
-<li>http://linuxdevcenter.com/pub/a/linux/2001/11/29/ruby.html</li>
-<li>http://www.informit.com/articles/article.aspx?p=18225</li>
 </ul>
 </article>
 
+</slide>
+
+<slide>
+<hgroup>
+<h2>References</h2>
+</hgroup>
+<article>
+<ul>
+<li>What's wrong with Perl <br>http://www.garshol.priv.no/download/text/perl.html</li>
+<li>Haskell趣學指南 <br>http://learnyouahaskell-zh-tw.csie.org</li>
+<li>An Interview with the Creator of Ruby<br>http://linuxdevcenter.com/pub/a/linux/2001/11/29/ruby.html</li>
+<li>cplusplus.com</li>
+<li>api.rubyonrails.org</li>
+<li>Gossip@caterpillar<br>http://caterpillar.onlyfun.net/Gossip/index.html</li>
+</ul>
+</article>
+</slide>  
+
+<slide>
+<hgroup>
+<h2>References</h2>
+</hgroup>
+<article>
+<ul>
+<li>Ruby Programming Language<br>http://www.ruby-lang.org</li>
+<li>Python Programming Language – Official Website<br>http://www.python.org</li>
+<li>The Go Programming Language<br>http://golang.org</li>
+</ul>
+</article>
+</slide>
+
+<slide>
+<hgroup>
+<h2>References</h2>
+</hgroup>
+<article>
+wikipedia.org<br><br>
+<img src="images/Wikipedia-logo-v2.png" alt="wikipedia" />
+<br><br>
+Our good friend
+</article>
 </slide>  
 
 <slide>
