--- a/new_age_pl_sildes/newage.html
+++ b/new_age_pl_sildes/newage.html
@@ -2707,7 +2707,30 @@ my_cat.age = my_cat.age + 1
       <footer class="source">Ruby Programming</footer>
     </article>
 </slide>
-  
+
+<slide>
+<hgroup>
+<h1 class="Takahashi">&nbsp;</h1>
+
+<h2 class="Takahashi">Try On-line!</h2>
+</hgroup>
+</slide>
+
+<slide>
+<hgroup>
+<h2>Try On-line!</h2>
+</hgroup>
+<article>
+<ul>
+<li>code school<br>www.codeschool.com<br>&nbsp;</li>
+<li>Try Python!<br>try-python.appspot.com<br>&nbsp;</li>
+<li>The Go Programming Language Tour<br>tour.golang.org<br>&nbsp;</li>
+
+</ul>
+</article>
+
+</slide>
+
 <slide>
 <hgroup>
 <h2>References</h2>
@@ -2748,9 +2771,9 @@ my_cat.age = my_cat.age + 1
 </hgroup>
 <article>
 <ul>
-<li>Ruby Programming Language<br>http://www.ruby-lang.org</li>
-<li>Python Programming Language – Official Website<br>http://www.python.org</li>
-<li>The Go Programming Language<br>http://golang.org</li>
+<li>Ruby Programming Language<br>http://www.ruby-lang.org<br>&nbsp;</li>
+<li>Python Programming Language – Official Website<br>http://www.python.org<br>&nbsp;</li>
+<li>The Go Programming Language<br>http://golang.org<br>&nbsp;</li>
 </ul>
 </article>
 </slide>
