--- a/new_age_pl_sildes/newage.html
+++ b/new_age_pl_sildes/newage.html
@@ -2112,6 +2112,14 @@ b = a.sort()
       </div>
     </article>
   </slide>
+  
+<slide>
+<hgroup>
+<h2 class="Takahashi">&nbsp;</h2>
+<h1 class="centre">Names are important.</h1>
+<h1 class="Takahashi">命名廚</h1>
+</hgroup>
+</slide>
 
 <slide>
 <hgroup>
@@ -2579,6 +2587,7 @@ my_cat.age = my_cat.age + 1
 <li>Mix-in</li>
 <li>Polymorphism</li>
 <li>Go language</li>
+<li>Regular Expression</li>
 </article>
 </slide>
 
