fix a mistake at why we..

--- a/new_age_pl_sildes/newage.html
+++ b/new_age_pl_sildes/newage.html
@@ -2608,7 +2608,7 @@ my_cat.age = my_cat.age + 1
 <li>Your boss wants you use C</li>
 <li>C can run fast</li>
 <li>C is close to hardwares</li>
-<li>You can get kownedges of computer science from C</li>
+<li>You can learn knowledges of computer science from C</li>
 </article>
 </slide>
 
